@@ -1,3 +1,7 @@
+2015-12-01  Mark Wielaard  <mjw@redhat.com>
+
+	* dwarf_end.c (dwarf_end): Call cu_free on fake_loc_cu if it exists.
+
 2015-10-19  Mark Wielaard  <mjw@redhat.com>
 
 	* frame-cache.c (__libdw_destroy_frame_cache): Call ebl_closebackend
